@@ -184,6 +184,8 @@ typedef
       /* 1144 */ UInt guest_MSACSR;
 
       /* 1148 */ UInt _padding2;
+      /* 1152 */ ULong guest_IP_AT_SYSCALL;
+      /* 1160 */ ULong _padding3;
 
 } VexGuestMIPS64State;
 
